# mampfi

./: .gitignore  CLAUDE.md  Makefile  README.md  SESSION_NOTES.md  deploy.rsync-exclude
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  prune-images.yml  release.yml
backend/: Dockerfile  README.md  alembic.ini  basedpyrightconfig.json  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 3967e02024f2_init.py  a1b2c3d4e5f6_add_purchase_invalidation_and_receipt.py  b2c3d4e5f6a7_add_delivery_fee_member_note.py  c3d4e5f6a7b8_add_rollover_enabled.py  d4e5f6a7b8c9_add_invite_token_raw.py  e5f6a7b8c9d0_add_banned_at_to_memberships.py  f6a7b8c9d0e1_add_deleted_at_to_users.py
backend/src/mampfi_api/: auth.py  config.py  db.py  exceptions.py  i18n.py  logging.py  main.py  models.py  timeutils.py  types.py  worker.py
backend/src/mampfi_api/routers/: auth.py  balances.py  events.py  holidays.py  invites.py  legal.py  me.py  members.py  orders.py  payments.py  purchases.py
backend/src/mampfi_api/schemas/: auth.py  balances.py  events.py  invites.py  members.py  orders.py  payments.py  purchases.py
backend/src/mampfi_api/scripts/: seed.py
backend/src/mampfi_api/services/: auth.py  balances.py  email.py  events.py  invites.py  members.py  memberships.py  orders.py  payments.py  purchases.py
backend/src/mampfi_api/templates/email/: base.html  base.txt  event_deleted.html  event_deleted.txt  invite.html  invite.txt  purchase_finalized.html  purchase_finalized.txt  reset_password.html  reset_password.txt  verify.html  verify.txt
backend/tests/: conftest.py  test_account_deletion.py  test_auth.py  test_auth_flows.py  test_balances.py  test_events.py  test_invites.py  test_members.py  test_memberships.py  test_orders.py  test_payments.py  test_purchases.py  test_worker.py
docs/: backlog.md  refactor.md  requirements.md
frontend/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css  tailwind.css
frontend/src/__tests__/: money.test.ts
frontend/src/components/: DateField.tsx  LegalFooter.tsx  MoneyInput.tsx  RequireAuth.tsx
frontend/src/hooks/: useAuth.ts  useEventContext.ts
frontend/src/i18n/: de.json  en.json  index.ts
frontend/src/lib/: api.ts  date.ts  errors.ts  holidays.ts  money.ts  types.ts
frontend/src/pages/: Account.tsx  EventDetail.tsx  EventsList.tsx  ForgotPassword.tsx  Join.tsx  LegalPage.tsx  Login.tsx  NewEvent.tsx  (+3 more)
infra/: .env.example  Caddyfile.example  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
infra/traefik/: docker-compose.yml
legal/: README.md
scripts/: smoke.sh
(+15 files in other folders)
