[project]
name = "mampfi-api"
version = "0.1.0"
description = "Mampfi FastAPI backend"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    # Pydantic v2-ready SQLModel release
    "sqlmodel>=0.0.24",
    "alembic>=1.16.4",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.12.5",
    "argon2-cffi>=24.0",
    "pyjwt>=2.10",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25",
    "httpx>=0.28.1",
    "anyio>=4",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mampfi_api"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length enforced by formatter
    "B008",  # Depends/Query in function defaults — required by FastAPI
]

[tool.ruff.lint.isort]
known-first-party = ["mampfi_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
